# Esper-RE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
EsperReader/: .gitignore  CMakeLists.txt  EsperReader.cpp  EsperReader.sln  EsperReader.vcxproj  EsperReader.vcxproj.filters  alr.cpp  alr.h  deck.h  deckSkillNames.h  readme.md
EsperReader/include/: alr.h  deck.h  main.h  winAPI.h
EsperReader/src/: CMakeLists.txt  alr.cpp  deck.cpp  deck.h  deckSkillNames.h  main.c  main.cpp  skill_names.h  skill_names.txt  winAPI.cpp  winAPI.h
alr/: .clang-format  .gitignore  CMakeLists.txt  format.sh  readme.md  rip.cmd  rip.sh  single_rip.sh
alr/src/: CMakeLists.txt  alr.c  alr.h  alr_interface.h  arguments.c  arguments.h  dump.c  dump.h  filesystem.c  filesystem.h  images.c  images.h  logging.c  logging.h  main.c  parsers.c  parsers.h  replace.c  replace.h  split.c  split.h
alr_parser/: CMakeLists.txt  readme.md
alr_parser/src/: CMakeLists.txt  alr.h  arguments.c  arguments.h  data_structures.h  images.c  images.h  main.c  parsers.c  parsers.h
alr_parser/src/lib/: arena.c  arena.h  logging.c  logging.h
common/: arguments.c  arguments.h  filesystem.c  filesystem.h  int.h  logging.h
deck_reader/: CMakeLists.txt  readme.md
deck_reader/src/: CMakeLists.txt  main.c
formats/: deck.h  stx.h
templates/: EsperALR.bt  EsperDeck.bt  EsperGSDATA.bt  EsperMK.bt  EsperSSB.bt  EsperSkillPack.bt  esper_deck.hexpat  esper_gsdata.hexpat
